--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
   <div id="core" class="smallfont">BACK</div>
 </div>
   </a>
-    <script src='http://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js'></script>
-<script src='http://rawgit.com/josephg/noisejs/master/perlin.js'></script>
-<script src='http://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.6.0/dat.gui.min.js'></script>
-<script src='http://cdnjs.cloudflare.com/ajax/libs/stats.js/r16/Stats.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js'></script>
+<script src='https://rawgit.com/josephg/noisejs/master/perlin.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.6.0/dat.gui.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/stats.js/r16/Stats.min.js'></script>
 
         <script src="js/index.js"></script>
 
