--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 									</a>
 								<a href="https://drive.google.com/open?id=0B8vxhWVcdDaLQVVTSjVqdlNVbGc">
 										<img src="https://s9.postimg.org/d6eiq9bf3/Screen_Shot_2016_10_08_at_8_21_20_PM.png" alt="" />
-										<h3>WORK, ENERGY, & MOMENTUM</h3>
+										<h3>WORK, ENERGY, AND MOMENTUM</h3>
 									</a>
                   	<a href="https://drive.google.com/open?id=0B8vxhWVcdDaLUjY3YTBIaXhKdk0">
 										<img src="https://s9.postimg.org/a8cyitedr/Screen_Shot_2016_10_08_at_8_22_12_PM.png" alt="" />
@@ -59,7 +59,7 @@
 									</a>
 									<a href="https://drive.google.com/open?id=0B8vxhWVcdDaLeTVlZ2JSdWxwbUU">
 										<img src="https://s9.postimg.org/tc69z5r7z/Screen_Shot_2016_10_08_at_8_22_23_PM.png" alt="" />
-										<h3>WAVES & SOUND</h3>
+										<h3>WAVES AND SOUND</h3>
 									</a>
                   <a href="https://drive.google.com/open?id=0B8vxhWVcdDaLRHVjWi1sNm93cjQ">
 										<img src="https://s9.postimg.org/kelk1syrz/Screen_Shot_2016_10_08_at_8_22_48_PM.png" alt="" />
@@ -107,3 +107,4 @@
     
   </body>
 </html>
+
