attempt to fix back arrow issue

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 									</a>
 									
 								</div>
-							<div>
+							<!--<div>
 									<a href="https://drive.google.com/open?id=0B8vxhWVcdDaLTDNtS21PbGpkNlE">
 										<img src="https://s9.postimg.org/knnq5h0y7/Screen_Shot_2016_10_08_at_8_21_03_PM.png" alt="" />
 
@@ -82,7 +82,7 @@
 										<h3>ELECTROSTATICS</h3>
 									</a>
                 
-								</div>
+								</div>-->
 							</section>
 
 					</section>
